Migrate JEI to new API