@@ -1,16 +1,15 @@
 package org.shsts.tinactory.compat.jei.category;
 
-import com.mojang.blaze3d.vertex.PoseStack;
 import javax.annotation.ParametersAreNonnullByDefault;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import net.minecraft.MethodsReturnNonnullByDefault;
+import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.world.level.block.Block;
 import org.shsts.tinactory.api.tech.ITechnology;
 import org.shsts.tinactory.core.gui.Layout;
 import org.shsts.tinactory.core.recipe.ResearchRecipe;
 import org.shsts.tinactory.integration.tech.TechManagers;
-import org.shsts.tinycorelib.api.recipe.IRecipeBuilderBase;
 import org.shsts.tinycorelib.api.registrate.entry.IRecipeType;
 
 import java.util.Collections;
@@ -24,7 +23,7 @@ import static org.shsts.tinactory.integration.util.ClientUtil.NUMBER_FORMAT;
 @MethodsReturnNonnullByDefault
 public class ResearchCategory extends ProcessingCategory<ResearchRecipe> {
     public ResearchCategory(
-        IRecipeType<? extends IRecipeBuilderBase<ResearchRecipe>> recipeType,
+        IRecipeType<ResearchRecipe> recipeType,
         Layout layout, Block icon) {
         super(recipeType, layout, icon);
     }
@@ -35,13 +34,13 @@ public class ResearchCategory extends ProcessingCategory<ResearchRecipe> {
     }
 
     @Override
-    protected int drawExtraText(ResearchRecipe recipe, int y, PoseStack stack) {
+    protected int drawExtraText(ResearchRecipe recipe, int y, GuiGraphics graphics) {
         var tech = TechManagers.client().techByKey(recipe.target);
         if (tech.isPresent()) {
-            y = drawRequiredTechText(stack, tech.get().getDepends().isEmpty(), y);
+            y = drawRequiredTechText(graphics, tech.get().getDepends().isEmpty(), y);
             var text = tr("progress", NUMBER_FORMAT.format(recipe.progress),
                 NUMBER_FORMAT.format(tech.get().getMaxProgress()));
-            return drawTextLine(stack, text, y);
+            return drawTextLine(graphics, text, y);
         } else {
             return y;
         }
@@ -50,7 +49,7 @@ public class ResearchCategory extends ProcessingCategory<ResearchRecipe> {
     @Override
     protected void extraLayout(ResearchRecipe recipe, IRecipeLayoutBuilder builder) {
         super.extraLayout(recipe, builder);
-        var rect = layout.images.get(0).rect();
+        var rect = layout.images.getFirst().rect();
         addTechIngredient(builder, RecipeIngredientRole.OUTPUT, rect.x(), rect.y(), recipe.target);
         var requiredTech = TechManagers.client().techByKey(recipe.target)
             .map(tech -> tech.getDepends().stream().map(ITechnology::loc).toList())
